objects/Site_Profile__c.object
<CustomObject>
    <description>Determines the site(s) that a Contact has access to.</description>
    <fields>
        <fullName>Bypass_Domain_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, domain validation will be bypassed.</inlineHelpText>
        <label>Bypass Domain Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles</relationshipLabel>
        <relationshipName>Site_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EAB_Historical_Id__c</fullName>
        <label>EAB Historical Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Contact__r.AccountId,  Contact__r.Account.Name,  &quot;_self&quot;)</formula>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Access__c</fullName>
        <label>Last Access</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Organization_Status__c</fullName>
        <formula>IF( ISPICKVAL( Type__c , &apos;EAB.com&apos;) ,  
    Contact__r.Account.EAB_com_Organization_Status__c ,
    IF( ISPICKVAL( Type__c , &apos;Advisory.com&apos;) ,  
        Contact__r.Account.Advisory_com_Organization_Status__c ,
        &apos;&apos;
    )
)</formula>
        <label>Organization Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_Reset_Token__c</fullName>
        <label>Password Reset Token</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Details__c</fullName>
        <formula>IF(CONTAINS($RecordType.DeveloperName, &quot;Royall&quot;), 
   IF(CONTAINS(TEXT(r_Portal_Access__c), &quot;Yes&quot;), 
      &quot;Features: &quot; + 
        IF(r_Enable_portal_Download_feature__c, &quot;Download &quot;, &quot;&quot;) + 
        IF(r_Enable_portal_Find_feature__c, &quot;Find &quot;, &quot;&quot;) + 
        IF(r_Enable_portal_Reports_feature__c, &quot;Reports&quot;, &quot;&quot;), 
      &quot;No access&quot;), 
   Status_Code_Description__c + &quot; &quot; + 
     IF(ISBLANK(TEXT(Status__c)), 
        &quot;&quot;, 
        &quot; (Status: &quot; + TEXT(Status__c) + &quot;)&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Password_Notification__c</fullName>
        <label>Send Password Notification</label>
        <picklist>
            <picklistValues>
                <fullName>New User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Profile_Created_By__c</fullName>
        <description>Created for CR-20150629-9034.</description>
        <label>Site Profile Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site User</label>
        <referenceTo>Site_User__c</referenceTo>
        <relationshipLabel>Site Profiles</relationshipLabel>
        <relationshipName>Site_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Code_Description__c</fullName>
        <formula>IF( RecordType.DeveloperName != &quot;MyRoyall&quot;,
IF( ISPICKVAL( Status__c , &apos;Hard Bounce&apos;) ,  
    IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Status is Hard Bounce&quot;, 
  IF( ISPICKVAL( Status__c , &apos;Inactive&apos;) ,  
    IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Status is Inactive&quot;, 
  IF(  CONTAINS( Organization_Status__c , &quot;Inactive&quot;) ,
    IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Organization Status is Inactive&quot;, 
  IF(  CONTAINS( TEXT( Contact__r.Contact_Status__c ) , &quot;Inactive&quot;) ,
    IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Contact Status is Inactive&quot;, 
  CASE( Status_Code__c ,
  &quot;E1&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Status is NOT Active, Inactive, or In Progress&quot;,
  &quot;E2&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Status is Inactive or Invalid Domain&quot;,
  &quot;E3&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Status is Active or In Progress and Organization status is Inactive&quot;,
  &quot;R1&quot;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 15, 15) &amp; &quot; Verify field is either Null, 3, or 4&quot;,
  &quot;R3&quot;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 15, 15) &amp; &quot; Verify field is 0 or 1&quot;,
  &quot;L1&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15) &amp; &quot; Uncheck domain flag is checked&quot;,
  &quot;L2&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15) &amp; &quot; Verify field is set to 2&quot;,
  &quot;&quot;)
)))),
&quot;&quot;
)</formula>
        <label>Status Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Status code calculated from the getUserStatus method.</description>
        <label>Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Use the Activate/Deactivate buttons above to update the Status as needed.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>EAB.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royall.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Id_Autonumber__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>User Id Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User_Id_Override__c</fullName>
        <inlineHelpText>Overrides the User Id field with a custom value instead of using the User Id Autonumber.</inlineHelpText>
        <label>User Id Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <formula>IF(NOT(ISBLANK( User_Id_Override__c )), TEXT( User_Id_Override__c ) , User_Id_Autonumber__c )</formula>
        <label>User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <externalId>true</externalId>
        <label>Username</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Verify_Date__c</fullName>
        <description>Site verification date</description>
        <label>Verify Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Verify__c</fullName>
        <description>site access verification</description>
        <label>Verify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>r_Enable_portal_Download_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable portal &quot;Download&quot; feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>r_Enable_portal_Find_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable portal &quot;Find&quot; feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>r_Enable_portal_Reports_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable portal &quot;Reports&quot; feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>r_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Site Profiles</relationshipLabel>
        <relationshipName>Site_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>r_Portal_Access__c</fullName>
        <label>Portal Access</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Site Profile</label>
    <nameField>
        <displayFormat>SP-{0000000}</displayFormat>
        <label>Site Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Profiles</pluralLabel>
    <recordTypes>
        <fullName>Active</fullName>
        <active>true</active>
        <description>Used for Active or In Progress Site Profiles for EAB and Advisory</description>
        <label>EAB and Advisory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive</fullName>
        <active>true</active>
        <description>Assigned to inactive site profiles.</description>
        <label>Inactive</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyRoyall</fullName>
        <active>true</active>
        <description>Royall.com access</description>
        <label>MyRoyall</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Modify_Contact</fullName>
        <active>true</active>
        <description>Only allow system admin and ABC Dataloader users to change the Contact once the record has been created</description>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Contact__c),
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    $Profile.Name &lt;&gt; &apos;ABC Dataloader&apos;
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>The Contact cannot be modified.  Create a new Site Profile for the desired Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Type</fullName>
        <active>true</active>
        <description>Do not allow users to change the profile type once it has been created.</description>
        <errorConditionFormula>AND (
    NOT( ISNEW() ),
    ISCHANGED( Type__c ) 
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>The type cannot be modified.  Create a new Site Profile with the desired type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Status_must_be_Active</fullName>
        <active>true</active>
        <description>Contact Status must be active to create a new Site Profile.</description>
        <errorConditionFormula>ISNEW() &amp;&amp;  NOT( ISPICKVAL( Contact__r.Contact_Status__c , &apos;Active&apos;) ) &amp;&amp; NOT (  CONTAINS( Contact__r.Email , &apos;_inactive&apos;) )</errorConditionFormula>
        <errorMessage>Cannot create a new Site Profile related to an inactive Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Royall_School_Id_Required</fullName>
        <active>true</active>
        <description>School ID is a required field when selecting an institution for the MyRoyall record type</description>
        <errorConditionFormula>AND(
   RecordType.DeveloperName == &quot;MyRoyall&quot;,
   ISBLANK( r_Institution__r.r_School_ID__c )
)</errorConditionFormula>
        <errorDisplayField>r_Institution__c</errorDisplayField>
        <errorMessage>The selected Institution must have a School ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Is_Required</fullName>
        <active>true</active>
        <description>Require a value in the Type field.</description>
        <errorConditionFormula>ISPICKVAL( Type__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Validate_Contact_First_Name</fullName>
        <active>true</active>
        <description>Created for CR-20150602-8984.</description>
        <errorConditionFormula>IF ( 
    AND ( 
        NOT(ISNULL(Contact__c)), 
        ISBLANK(Contact__r.FirstName) 
    ), 
    true, 
    false 
)</errorConditionFormula>
        <errorMessage>Please populate First Name field with a value on the related contact.</errorMessage>
    </validationRules>
</CustomObject>